# zipcoder

./: CHANGELOG.md  LICENSE  README.md  zipcoder.cabal
app/: Main.hs
src/ZipCoder/: Lib.hs  Model.hs  OptionsParser.hs
