cabal-version:      2.4
name:               zipcoder
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Josep Bigorra
maintainer:         josep.bigorra@ingka.ikea.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    ZipCoder.Lib
    ZipCoder.Model
    ZipCoder.OptionsParser

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                  ^>=4.14.3.0
    , containers            ^>=0.6.5
    , optparse-applicative  ^>=0.16.1.0
    , raw-strings-qq        ^>=1.1
    , regex-tdfa            ^>=1.3.1
    , split                 ^>=0.2.3

  hs-source-dirs:   src
  default-language: Haskell2010

executable zipcoder
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base      ^>=4.14.3.0
    , zipcoder

  hs-source-dirs:   app
  default-language: Haskell2010
